# RucioDummyEventCreator

./: README.rst  SConstruct  pyproject.toml  setup.cfg
bin.src/: dummy_event_generator
doc/: conf.py  index.rst  manifest.yaml
python/lsst/rucioevents/: __init__.py  config.py  dummy_event_generator.py  event_creator.py  kafka_producer.py  rucio_processor.py
tests/: rucio_processor_rest.py  test_config.py  test_dummy_creator.py  test_event_creator.py  test_kafka_producer.py  test_rucio_processor.py
